--- a/app.yaml
+++ b/app.yaml
@@ -19,3 +19,5 @@ handlers:
   script: dispense.php
 - url: /DispenseAuto.php
   script: DispenseAuto.php
+- url: /addRecordAuto.php
+  script: addRecordAuto.php
